# cocaine_direct_storage_access

./: CMakeLists.txt
include/cocaine/: direct_access.hpp
include/framework/services/: direct_access.hpp
include/idl/: direct_access.hpp
src/: direct_access.cpp  module.cpp
